...
        };
      }
    | undefined;
  Bonuses: undefined;
  Results: undefined;
  Leaderboard: undefined;
  Profile: undefined;
  Shop: undefined;
  Settings: undefined;
  TrailBuddySelection: undefined;
  ProfileMain: undefined;
  ProfileCustomization: undefined;
  PersonalInformation: undefined;
...
  AISettings: undefined;
  NotificationSettings: undefined;
};

export type MessageContact = {
  name: string;
  avatar: string;
  status: string;
};

export interface Task {
  id: string;
  title: string;
...
